# adventofcode2021

./: day1.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb  pyproject.toml
data/: day1.csv  day2.csv  day3.csv
