[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["roydobbe"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
ipykernel = "^6.6.0"
mailjet = "^1.4.1"
mailjet-rest = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
